# REngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  main.cpp  meson.build  meson_options.txt
common/: converter.hpp  math.hpp  nodeVisitor.hpp
core/: CMakeLists.txt  IViews.hpp  Info.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  commandBuffer.cpp  commandBuffer.hpp  descriptorPool.cpp  descriptorPool.hpp  headers.h  image.cpp  image.hpp  instance.cpp  instance.hpp  mesh.cpp  mesh.hpp  meson.build  object.cpp  object.hpp  pipeline.cpp  pipeline.hpp  queue.cpp  queue.hpp  queueFamily.cpp  queueFamily.hpp  renderPass.cpp  renderPass.hpp  renderTarget.cpp  renderTarget.hpp  renderer.cpp  renderer.hpp  runner.cpp  runner.hpp  store.hpp  swapchain.cpp  swapchain.hpp  time.cpp  time.hpp  (+5 more)
core/drawable/: CMakeLists.txt  drawable.hpp  mesh.cpp  mesh.hpp
docs/: TODO.md  core.puml  nodes.puml  notes.md
editor/: CMakeLists.txt  editor.cpp  editor.hpp  grid.cpp  grid.hpp  inspector.cpp  inspector.hpp  inspectorVisitor.cpp  inspectorVisitor.hpp  meson.build  sceneTree.cpp  sceneTree.hpp  serializer.cpp  serializer.hpp  theme.hpp
editor/widgets/: CMakeLists.txt  meson.build  vec3.cpp  widgets.hpp
input/: CMakeLists.txt  keyboard.cpp  keyboard.hpp  meson.build  mouse.cpp  mouse.hpp
loader/: CMakeLists.txt  image.cpp  image.hpp  meson.build  obj.cpp  obj.hpp  shader.cpp  shader.hpp
scene/: CMakeLists.txt  deserializer.cpp  deserializer.hpp  drawable.cpp  drawable.hpp  mesh.cpp  mesh.hpp  meson.build  node.cpp  node.hpp  node3d.cpp  node3d.hpp  player.cpp  player.hpp  portal.cpp  portal.hpp  portalMesh.cpp  portalMesh.hpp  sceneTree.cpp  sceneTree.hpp  store.cpp  store.hpp  textureMesh.cpp  textureMesh.hpp
shaders/: CMakeLists.txt  compile.bat  compile.sh  fragment.frag  gridFrag.frag  gridVert.vert  portalFrag.frag  portalVert.vert  vertex.vert  whiteFrag.frag
submodules/: CMakeLists.txt  meson.build
submodules/imgui_impl/: imgui_impl_vulkan.cpp
test_files/: exit8.mtl  player.mtl  poster.mtl  rengine-level1.mtl  test_level.mtl
