add_subdirectory(drawable)

set(core_sources
	${CMAKE_CURRENT_SOURCE_DIR}/store.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/windowManager.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/instance.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/queueFamily.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/swapchain.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/image.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/buffer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/pipeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/descriptorPool.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/renderer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/commandBuffer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/time.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/runner.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/camera.cpp
	${drawable_sources}
	PARENT_SCOPE
)
